tests/miniJava/neg/005258_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] public java ( ) { return 0 ; } }
